# ranked_belief

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CPP20_MAINTAINABILITY_PLAN.md  CPP_PORT_DESIGN.md  Doxyfile  GITHUB_PAGES_SETUP.md  IMPLEMENTATION_CHECKLIST.md  Makefile  README.md  gdb_rank_underflow.gdb  test_merge_debug  test_merge_debug.cpp  test_merge_simple  test_merge_simple.cpp
.github/workflows/: README.md  deploy-docs.yml
bindings/python/: CMakeLists.txt  README.md  pytest.ini
bindings/python/ranked_belief/: __init__.py  dsl.py
bindings/python/ranked_belief/examples/: boolean_circuit.py  hidden_markov.py  localisation.py  ranked_let.py  ranked_procedure_call.py  ranking_network.py  recursion.py  spelling_correction.py
bindings/python/src/: module.cpp
bindings/python/tests/: conftest.py  test_core.py  test_examples.py  test_smoke.py
bindings/rankedBeliefR/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  build_vignettes.R
bindings/rankedBeliefR/R/: rankedbelief.R  zzz.R
bindings/rankedBeliefR/inst/examples/: README.md  boolean_circuit.R  hidden_markov.R  localisation.R  ranked_let.R  ranked_procedure_call.R  ranking_network.R  recursion.R  run_examples.R  spelling_correction.R
bindings/rankedBeliefR/src/: Makevars  Makevars.win  init.c  rankedbeliefr.c
bindings/rankedBeliefR/tests/: testthat.R
bindings/rankedBeliefR/tests/testthat/: get_basic_api.R  test_callback_errors.R  test_empty_inputs.R  test_large_ranks.R  test_map_filter.R  test_merge_apply.R  test_merge_observe.R
bindings/rankedBeliefR/vignettes/: README.md  boolean-circuit.Rmd  boolean-circuit.html  introduction.Rmd  introduction.html  recursive-rankings.Rmd  recursive-rankings.html
build-fuzz/: DartConfiguration.tcl  Makefile
build-test/: DartConfiguration.tcl  Makefile  ranked_belief-config.cmake
build-test/examples/: Makefile  boolean_circuit_example  recursion_example
build-test/tests/: Makefile  ranked_belief_c_api_test  ranked_belief_tests[1]_include.cmake  ranked_belief_tests[1]_tests.cmake
cmake/: ranked_belief-config.cmake.in
docs/: API.md
examples/: CMakeLists.txt  README.md  boolean_circuit.cpp  recursion.cpp
include/ranked_belief/: autocast.hpp  c_api.h  concepts.hpp  constructors.hpp  operators.hpp  promise.hpp  promise_static.hpp  rank.hpp  ranking_element.hpp  ranking_function.hpp  ranking_iterator.hpp  type_erasure.hpp  types.hpp
include/ranked_belief/detail/: any_equality_registry.hpp
include/ranked_belief/operations/: filter.hpp  map.hpp  merge.hpp  merge_apply.hpp  nrm_exc.hpp  observe.hpp
scripts/: build.sh
src/: c_api.cpp
tests/: CMakeLists.txt  autocast_test.cpp  c_api_test.c  constructors_test.cpp  integration_test.cpp  operators_test.cpp  promise_test.cpp  rank_test.cpp  ranking_element_test.cpp  ranking_function_test.cpp  ranking_iterator_test.cpp  type_erasure_test.cpp
tests/operations/: filter_test.cpp  map_test.cpp  merge_apply_test.cpp  merge_test.cpp  normal_exceptional_regression_test.cpp  nrm_exc_test.cpp  observe_test.cpp
